made java8 compatible