@@ -11,13 +11,11 @@
 
 	<properties>
 		<junit-version>4.4</junit-version>
-		<maven.compiler.source>13</maven.compiler.source>
-		<maven.compiler.target>13</maven.compiler.target>
+		<maven.compiler.source>8</maven.compiler.source>
+		<maven.compiler.target>8</maven.compiler.target>
 	</properties>
 
 	<modules>
-		<module>java13-example</module>
-		<module>java12-example</module>
 		<module>java8-example</module>
 		<module>uva-onlinejudge</module>
 		<module>apache-camel</module>
@@ -28,7 +26,6 @@
 		<module>data-structure</module>
 		<module>elasticsearch</module>
 		<module>xml-jaxb</module>
-		<module>java9-multimodule</module>
 		<module>basic</module>
 		<module>advance</module>
 		<module>reporting</module>
@@ -59,10 +56,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.0</version>
 				<configuration>
-					<release>13</release>
-					<compilerArgs>
-						--enable-preview
-					</compilerArgs>
+					<release>8</release>
 				</configuration>
 			</plugin>
 		</plugins>
